# security-cam-system

./: .gitignore  README.md
detection/facial/: pyproject.toml
detection/facial/scripts/: benchmark.py  download_images.py  label_images.py
docs/: connection-diagram.html  plan.md
edge/camctl/: main.py
edge/systemd/: camctl.service
face-detection/: classify_faces.py  pyproject.toml  train-face-classifier.py
mothership/: docker-compose.yml
mothership/face-detector/: detector.py  requirements.txt
mothership/frigate/: config.yml
scripts/: setup-cam.sh  snapshot.sh
